--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,14 @@ version = '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-[compileJava, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options", "-Werror"]
+[compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:all,-options,-rawtypes', '-Werror']
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
+
+defaultTasks 'eclipse'
 
 ext.buildDate = new Date()
 ext.buildNumber = System.env['BUILD_NUMBER']?.toLong() ?: (long) buildDate.time.intdiv(1000).intdiv(60)
@@ -27,7 +30,7 @@ repositories {
 
 dependencies {
 	compile 'junit:junit:4.12'
-	compile 'org.eclipse.swt:org.eclipse.swt.win32.win32.x86:4.3'
+	compileOnly 'org.eclipse.swt:org.eclipse.swt.win32.win32.x86:4.3'
 }
 
 tasks.eclipse.dependsOn(cleanEclipse)
