--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,13 @@ repositories {
 
 dependencies {
 	compile 'junit:junit:4.12'
+	compileOnly "org.eclipse.swt:org.eclipse.swt.win32.win32.x86:4.3"
 	if (currentOS.windows)
-		compile "org.eclipse.swt:org.eclipse.swt.win32.win32.x86${is64bit()?'_64':''}:4.3"
+		runtime "org.eclipse.swt:org.eclipse.swt.win32.win32.x86${is64bit()?'_64':''}:4.3"
 	else if (currentOS.linux)
-		compile "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86${is64bit()?'_64':''}:4.3"
+		runtime "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86${is64bit()?'_64':''}:4.3"
 	else if (currentOS.macOsX)
-		compile "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86${is64bit()?'_64':''}:4.3"
+		runtime "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86${is64bit()?'_64':''}:4.3"
 }
 
 tasks.eclipse.dependsOn(cleanEclipse)
