--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group = 'ru.vitkud.test'
 version = '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
@@ -28,13 +29,13 @@ repositories {
 
 dependencies {
 	compile 'junit:junit:4.12'
-	compileOnly "org.eclipse.swt:org.eclipse.swt.win32.win32.x86:4.3"
+
 	if (currentOS.windows)
-		runtime "org.eclipse.swt:org.eclipse.swt.win32.win32.x86${is64bit()?'_64':''}:4.3"
+		compileOnly "org.eclipse.swt:org.eclipse.swt.win32.win32.x86${is64bit()?'_64':''}:4.3"
 	else if (currentOS.linux)
-		runtime "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86${is64bit()?'_64':''}:4.3"
+		compileOnly "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86${is64bit()?'_64':''}:4.3"
 	else if (currentOS.macOsX)
-		runtime "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86${is64bit()?'_64':''}:4.3"
+		compileOnly "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86${is64bit()?'_64':''}:4.3"
 }
 
 tasks.eclipse.dependsOn(cleanEclipse)
